# scixtracer_local

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml  requirements.txt
sxt_local/: __init__.py
sxt_local/index/: __init__.py  local.py  queries.py  schema.sql
sxt_local/metadata/: __init__.py  local.py
sxt_local/runner/: __init__.py  local.py
sxt_local/storage/: __init__.py  local.py
