[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sxt_local"
version = "0.0.1"
dependencies = [
  "scixtracer >= 0.0.1",
  "zarr >= 2.18.2",
  "joblib >= 1.4.2"
]
requires-python = ">= 3.10"
maintainers = [
  {name = "Sylvain Prigent", email = "meriadec.prigent@gmail.com"}
]
description = "Library to trace transformations on datasets"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Data science", "Dataset", "tracing"]
classifiers = [
  "Development Status :: 2 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://sylvainprigent.github.io/scixtracer"
Documentation = "https://sylvainprigent.github.io/scixtracer"
Repository = "https://github.com/sylvainprigent/scixtracer.git"
"Bug Tracker" = "https://github.com/sylvainprigent/scixtracer/issues"
Changelog = "https://github.com/sylvainprigent/scixtracer/blob/master/CHANGELOG.md"
